Added habitId filter
